Fixed username wrapping on leaderboard

--- a/web/styles/chungus.css
+++ b/web/styles/chungus.css
@@ -71,6 +71,7 @@ td {
     max-width: 50vw;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .leaderboard #question #qDiv #leaderboard {
